# pcgs-database

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
src/pcgs_database/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  scraper.py
src/pcgs_database/routers/: coins.py  tasks.py
static/: index.html  tasks.html
static/css/: style.css
static/js/: app.js
